feat: add localstack test