@@ -3,8 +3,10 @@ package it.pagopa.pn.scripts.commands.sparksql;
 import it.pagopa.pn.scripts.commands.logs.Msg;
 import it.pagopa.pn.scripts.commands.logs.MsgSenderSupport;
 import it.pagopa.pn.scripts.commands.exports.ec_metadata.seq.RawEventSequence;
+import org.apache.spark.SparkConf;
 import org.apache.spark.api.java.JavaSparkContext;
 import org.apache.spark.sql.*;
+import org.jetbrains.annotations.Nullable;
 
 import java.io.IOException;
 import java.io.Serializable;
@@ -14,17 +16,21 @@ import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.util.List;
 import java.util.concurrent.*;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class SparkSqlWrapper extends MsgSenderSupport {
 
-    public static SparkSqlWrapper localSingleCore( String appicationName ) {
-        return new SparkSqlWrapper( appicationName, 1, 1 );
-    }
+    public static SparkSqlWrapper local(String applicationName, SparkConf sparkConf, Boolean isMultiCore) {
 
-    public static SparkSqlWrapper localMultiCore( String appicationName ) {
-        return new SparkSqlWrapper( appicationName, Runtime.getRuntime().availableProcessors(), 2 );
+        int cores = Boolean.TRUE.equals(isMultiCore) ? Runtime.getRuntime().availableProcessors() : 1;
+        int maxJobEnqueued = Boolean.TRUE.equals(isMultiCore) ? 2 : 1;
+
+        return new SparkSqlWrapper(
+            applicationName,
+            cores,
+            maxJobEnqueued,
+            sparkConf
+        );
     }
 
     private final SparkSession spark;
@@ -33,12 +39,20 @@ public class SparkSqlWrapper extends MsgSenderSupport {
 
     private final ThreadPoolExecutor jobWorkers;
 
-    private SparkSqlWrapper(String applicationName, int cores, int maxJobEnqueued ) {
+    private SparkSqlWrapper(String applicationName, int cores, int maxJobEnqueued, @Nullable SparkConf sparkConf) {
+
+        if (sparkConf == null) {
+            sparkConf = new SparkConf();
+        }
+
+        sparkConf
+            .setAppName(applicationName)
+            .setMaster("local[" + cores + "]");
+
         spark = SparkSession.builder()
-                .appName( applicationName )
-                .master("local[" + cores + "]")
-                .config("spark.hadoop.fs.s3a.impl", "org.apache.hadoop.fs.s3a.S3AFileSystem")
+                .config(sparkConf)
                 .getOrCreate();
+
         sparkContext = new JavaSparkContext( spark.sparkContext() );
         sqlContext = spark.sqlContext();
 
@@ -120,7 +134,7 @@ public class SparkSqlWrapper extends MsgSenderSupport {
     public void ceateTableFromStringCollection( String tableName, List<String> lines ) {
         spark.createDataFrame(
                 sparkContext.parallelize(
-                        lines.stream().map(l -> new LineHolder(l)).collect(Collectors.toList())
+                        lines.stream().map(LineHolder::new).toList()
                     ),
                 LineHolder.class
             )
